blocks/dealer-locator/dealer-locator.css
/* ... */
.dealer-locator .datasource-option .row {
    text-align: center;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
    width: 600px;
    background-color: #fff;
    height: 350px;
    display: grid;
    align-items: center;
    border: 15px solid #4d4e53
}

@media (max-width: 991px) {
    .dealer-locator .datasource-option .row {
        width:85vw;
        padding: 0;
        margin: 0
    }
}

.dealer-locator .datasource-option .row h3 {
    font-size: 4rem
}

.dealer-locator .datasource-option .row button {
    display: inline-block;
    margin-bottom: 0;
    font-weight: 700;
    text-align: center;
    vertical-align: middle;
    touch-action: manipulation;
    cursor: pointer;
    background-image: none;
    border: 2px solid #4d4e53;
    white-space: nowrap;
    padding: 12px 32px;
    font-size: 16px;
    line-height: 1.5;
    border-radius: 0;
    user-select: none;
    user-select: none;
    color: #4d4e53;
    background-color: #FFF
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
    .dealer-locator .datasource-option .row {
        padding-top: 50px
    }
}

.dealer-locator *,.dealer-locator ::after,.dealer-locator ::before {
    box-sizing: initial
}

.dealer-locator .tooltip {
    position: relative;
    display: inline-block;
    opacity: 1
}

.dealer-locator .tooltip .tooltiptext {
    visibility: hidden;
    font-family: Arial,sans-serif;
    width: 120px;
    background-color: #000;
    font-size: 12px;
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;
    text-transform: none;
    position: absolute;
    z-index: 150;
    top: 100%;
    left: 50%;
    margin-left: -60px
}

.dealer-locator .tooltip .tooltiptext.cancel {
    left: -9%
}

.dealer-locator .tooltip .tooltiptext.cancel::after {
    top: -13px;
    left: 83%;
    margin-left: -20.5px
}

.dealer-locator .tooltip .tooltiptext.copy {
    margin-left: -110px;
    top: 30px
}

.dealer-locator .tooltip .tooltiptext.link {
    margin-left: -110px;
    top: 20px
}

.dealer-locator .tooltip .tooltiptext.geo,.dealer-locator .tooltip .tooltiptext.mydealer {
    margin-left: -105px;
    top: 35px
}

.dealer-locator .tooltip .tooltiptext.removepin {
    margin-left: 0
}

.dealer-locator .tooltip:hover .tooltiptext {
    visibility: visible
}

.dealer-locator .main-directions .go-back button {
    background: 0 0;
    cursor: pointer;
    border: 1px solid #000;
    font-size: 14px;
    padding: 6px;
    margin-bottom: 10px;
    opacity: .8
}

.dealer-locator .main-directions .go-back button:hover {
    opacity: 1;
    background-color: #e6e6e6;
    border: 1px solid transparent
}

.dealer-locator .select-directions {
    display: inline-block;
    text-align: right;
    width: 90%
}

.dealer-locator .select-directions .go-back button {
    background: 0 0;
    cursor: pointer;
    border: 1px solid #000;
    font-size: 14px;
    padding: 6px;
    margin-bottom: 10px;
    opacity: .8
}

.dealer-locator .select-directions .go-back button:hover {
    opacity: 1;
    background-color: #e6e6e6;
    border: 1px solid transparent
}

.dealer-locator div[id*=sidebar-select-pins] .header-title {
    padding: 0!important
}

.dealer-locator .go-back-pin button {
    background: 0 0;
    cursor: pointer;
    border: 1px solid #000;
    font-size: 14px;
    padding: 6px;
    margin-bottom: 10px;
    width: 100%;
    opacity: .8
}

.dealer-locator .go-back-pin button:hover {
    opacity: 1;
    background-color: #e6e6e6;
    border: 1px solid transparent
}

.dealer-locator .panel-footer {
    position: absolute;
    bottom: 0;
    border-top: 1px solid #E4E4E4;
    left: 0;
    padding: 10px;
    width: 388px;
    color: #8c8c8c;
    z-index: 10;
    background: #fff;
    display: none
}

.dealer-locator .nearby-pins {
    font-size: 15px;
    cursor: pointer;
    height: 100%;
    position: relative;
    overflow: hidden
}

.dealer-locator .nearby-pins>div {
    border: 1px solid transparent
}

.dealer-locator .nearby-pins::-webkit-scrollbar-thumb {
    background-color: #888!important
}

.dealer-locator .nearby-pins::-webkit-scrollbar {
    width: 6px!important
}

.dealer-locator .nearby-pins .panel-card {
    box-shadow: none;
    border-bottom: 1px solid #e6e6e6;
    cursor: default
}

.dealer-locator .nearby-pins .panel-card:hover {
    background-color: #f2f2f3
}

.dealer-locator .nearby-pins article.teaser {
    font-size: inherit;
    padding-bottom: 12px;
    padding-top: 5px;
    width: 100%;
    display: inline-flex;
    align-items: center;
    justify-content: center
}

.dealer-locator .nearby-pins article.teaser .marker-main {
    width: 15%;
}

.dealer-locator .nearby-pins article.teaser .dealerPanelContainer {
    width: unset; 
}

@media (min-width: 496px) and (max-width: 992px) {
    .sidebar .dealerPanelContainer {
      width: 70% !important;
    }
  }

.dealer-locator .nearby-pins article.teaser .teaser-top {
    cursor: pointer
}

.dealer-locator .nearby-pins article.teaser .teaser-top #marker {
    width: 30px;
    float: left;
    padding-top: 10px;
    padding-right: 10px
}

.dealer-locator .nearby-pins article.teaser .teaser-top .heading {
    display: flex;
    -webkit-box-pack: justify;
    -moz-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between
}

.dealer-locator .nearby-pins article.teaser .teaser-top .heading p {
    color: #000;
    font-size: 14px;
    display: block;
    font-weight: 700;
    margin: 10px 0 0;
    max-width: 75%;
}

.dealer-locator .nearby-pins article.teaser .teaser-top .heading div.distance {
    font-size: 14px;
    margin-top: 10px;
    font-weight: 700;
    color: #000
}
/* ... */

